RESOLVED FIXED110260
Fix typo: inititatorFor->initiatorFor
https://bugs.webkit.org/show_bug.cgi?id=110260
Summary Fix typo: inititatorFor->initiatorFor
Tony Gentilcore
Reported 2013-02-19 13:49:00 PST
Fix typo: inititatorFor->initiatorFor
Attachments
Patch (2.57 KB, patch)
2013-02-19 13:49 PST, Tony Gentilcore
no flags
Tony Gentilcore
Comment 1 2013-02-19 13:49:30 PST
Adam Barth
Comment 2 2013-02-19 14:05:03 PST
Thanks!
WebKit Review Bot
Comment 3 2013-02-19 16:00:07 PST
Comment on attachment 189156 [details] Patch Clearing flags on attachment: 189156 Committed r143399: <http://trac.webkit.org/changeset/143399>
WebKit Review Bot
Comment 4 2013-02-19 16:00:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.