Fix typo: inititatorFor->initiatorFor https://bugs.webkit.org/show_bug.cgi?id=110260

Reviewed by Adam Barth.

No new tests because no changed functionality.

* html/parser/HTMLPreloadScanner.cpp:
(WebCore::TokenPreloadScanner::initiatorFor):
(WebCore::TokenPreloadScanner::StartTagScanner::createPreloadRequest):
* html/parser/HTMLPreloadScanner.h:


Canonical link: https://commits.webkit.org/128581@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143399 268f45cc-cd09-0410-ab3c-d52691b4dbfc